packages/webassemblyjs/test/fixtures/type-errors/load/module.wast
(module (memory 1) (func (result i32) (i32.load (f32.const 0))))
